--- a/wazotool_proto/wazotool_proto.csproj
+++ b/wazotool_proto/wazotool_proto.csproj
@@ -8,6 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Images\gitdark.png" />
+    <None Remove="Images\gitwhite.png" />
+    <None Remove="Images\pluto.png" />
     <None Remove="Images\toolclip1.png" />
   </ItemGroup>
 
@@ -17,18 +20,18 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="Images\gitdark.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\gitwhite.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\pluto.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
     <Resource Include="Images\toolclip1.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Update="Images\gitdark.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="Images\gitwhite.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
   </ItemGroup>
 
 </Project>
